--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: quarto-dev/quarto-actions/setup@v2
-      - uses: r-lib/actions/setup-r@v2
-      - name: Instalar dependencias
+      - name: Baixar Codigo
+        uses: actions/checkout@v4
+
+      - name: Instalar R (Obrigatório para os pacotes)
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.3.0'
+
+      - name: Instalar Quarto e TinyTeX (Motor PDF)
+        uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          tinytex: true 
+
+      - name: Instalar Bibliotecas da Secretaria
         run: Rscript -e 'install.packages(c("tidyverse", "scales", "janitor"))'
+
       - name: Renderizar PDF
         run: quarto render Projeto_saude.qmd --to pdf
-      - name: Upload do PDF
+
+      - name: Upload do Relatorio Final
         uses: actions/upload-artifact@v4
         with:
           name: Relatorio-Saude-Final
