--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,12 @@
-name: Atualizar Relatorio Saude
+iname: Atualizar Relatorio Saude
 on:
   schedule:
     - cron: '0 11 * * *' # 08:00 no horário de Brasília (UTC-3)
   push:
     branches: [main]
   workflow_dispatch: # Adiciona botão para teste manual
-
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -39,8 +40,8 @@ jobs:
       - name: 5. Renderizar PDF
         run: quarto render Projeto_saude.qmd --to pdf
 
-      - name: 6. Upload do Relatorio Final
-        uses: actions/upload-artifact@v4
+      - name: 6. Salvar e Atualizar no Git
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          name: Relatorio-Saude-Final
-          path: Projeto_saude.pdf
+          commit_message: "Relatório Atualizado Automaticamente [Robô]"
+          file_pattern: '*.pdf' # Só comita se for PDF
